<?xml version="1.0"?>
<package>
  <name>loam_horizon</name>
  <version>0.0.0</version>

  <description>
    This is an advanced implementation of the following open source project:
    [A-LOAM](https://github.com/HKUST-Aerial-Robotics/A-LOAM).
  </description>

  <maintainer email="dev@livoxtech.com">livox</maintainer>

  <license>BSD</license>

  <author email="dev@livoxtech.com">livox</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>
